# estatab

./: .gitignore  .yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  docker-compose.yml  justfile  package-lock.json  package.json  pyproject.toml
.github/: ISSUE_TEMPLATE.md
apps/api/: Dockerfile  README.md  main.py  models.py  pyproject.toml
apps/web/: Dockerfile  README.md  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/experiments/new/: page.tsx
apps/web/app/experiments/results/: page.tsx
apps/web/app/experiments/run/: page.tsx
apps/web/utils/: storage.ts  types.ts  ux.ts
docs/: config.html  index.html  index.md  installation.md  results.html  usage.md
src/: cov.xml  exemplo.ipynb  requirements.txt  setup.py
src/estatab/: __init__.py  cli.py  core.py  estatab.py  exemplo.ipynb  utils.py
src/tests/: __init__.py  test_core.py
